--- a/index.html
+++ b/index.html
@@ -2,10 +2,35 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Broadway</title>
+    <title>website</title>
 	  <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Broadway</h1>
+    <header>
+      <h1>Broadway Design</h1>
+    </header>
+    <div class="section1">
+      <h2>Our Process</h2>
+    </div>
+    <div class="section1">
+      <h3>Identify</h3>
+    </div>
+    <div class="section2">
+      <h3>Understand</h3>
+    </div>
+    <div class="section3">
+      <h3>Execute</h3>
+    </div>
+    <div class="section4">
+      <h3>Portfolio</h3>
+    </div>
+    <div class="section5">
+      <h3>Team</h3>
+    </div>
+    <div class="section6">
+      <h3>Contact</h3>
+    </div>
+    <footer>
+    </footer>
   </body>
 </html>
