--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
       <h3>Contact</h3>
     </div>
     <footer>
+      <p id="copy">&copy; Broadway 2017</p>
+      <a href="home">Home</a>
+      <a href="about">About</a>
+      <a href="work">Work</a>
+      <a href="team">Team</a>
+      <a href="contact">Contact</a>
     </footer>
   </body>
 </html>
