Reposition and style nav elements.  Add background image for header.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <body>
     <header>
       <h1>Broadway Design</h1>
+      <nav>
+        <p><a class="btn-nav" href="#">Home</a></p>
+        <p><a class="btn-nav" href="#about">About</a></p>
+        <p><a class="btn-nav" href="#work">Work</a></p>
+        <p><a class="btn-nav" href="#team">Team</a></p>
+        <p><a class="btn-nav" href="#contact">Contact</a></p>
+      </nav>
     </header>
     <div class="section1">
       <h2>Our Process</h2>
@@ -32,12 +39,12 @@
     </div>
     <footer>
       <p id="copy">&copy; Broadway 2017</p>
-      <nav class="btn-nav">
-        <a href="home">Home</a>
-        <a href="about">About</a>
-        <a href="work">Work</a>
-        <a href="team">Team</a>
-        <a href="contact">Contact</a>
+      <nav>
+        <a class="btn-nav" href="#">Home</a>
+        <a class="btn-nav" href="#about">About</a>
+        <a class="btn-nav" href="#work">Work</a>
+        <a class="btn-nav" href="#team">Team</a>
+        <a class="btn-nav" href="#contact">Contact</a>
       </nav>
     </footer>
   </body>
