--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <div class="section3">
       <h3>Execute</h3>
     </div>
+    <div>
+      <h3 class="divider">Designed in New York</h3>
+    </div>
     <div class="section4">
       <h3>Portfolio</h3>
     </div>
