--- a/index.html
+++ b/index.html
@@ -20,25 +20,36 @@
       <h2>Our Process</h2>
     </div>
     <div class="section1">
+      <img alt="Identify" src="./resources/images/identify.svg" />
       <h3>Identify</h3>
+      <p>We focus on the most important details.</p>
     </div>
     <div class="section2">
+      <img alt="Understand" src="./resources/images/understand.svg" />
       <h3>Understand</h3>
+      <p>We study our projects inside and out.</p>
     </div>
     <div class="section3">
+      <img alt="Execute" src="./resources/images/execute.svg" />
       <h3>Execute</h3>
+      <p>We put everything we have into our work.</p>
     </div>
     <div>
       <h3 class="divider">Designed in New York</h3>
     </div>
     <div class="section4">
       <h3>Portfolio</h3>
+      <p>Coming Soon</p>
     </div>
     <div class="section5">
       <h3>Team</h3>
+      <p>We're Hiring!</p>
     </div>
     <div class="section6">
       <h3>Contact</h3>
+      <p>Phone: (555)-555-5555</p>
+      <p>E-mail: test@example.com</p>
+      <p>Twitter: @test</p>
     </div>
     <footer>
       <p id="copy">&copy; Broadway 2017</p>
